@@ -1,3 +1,13 @@
+2011-11-15  Darin Adler  <darin@apple.com>
+
+        DRT's uiElementAttributeValueCallback function is leaky
+        https://bugs.webkit.org/show_bug.cgi?id=72453
+
+        Reviewed by Dan Bernstein.
+
+        * DumpRenderTree/AccessibilityUIElement.cpp:
+        (uiElementAttributeValueCallback): Use JSRetainPtr and don't leak.
+
 2011-11-14  Ryosuke Niwa  <rniwa@webkit.org>
 
         Implement edit-distance based reviewer recognition algorithm
